Use order item card for staged items & fix small issues in dark mode

--- a/src/app/pages/cash-register-pages/booking-page/booking-page.component.scss
+++ b/src/app/pages/cash-register-pages/booking-page/booking-page.component.scss
@@ -103,6 +103,7 @@
 .staged-items-separator p {
 	margin: 0;
 	text-wrap-mode: nowrap;
+	color: var(--dav-color-on-surface);
 }
 
 .separator {
@@ -124,6 +125,7 @@
 .console-output > p {
 	margin: 16px;
 	text-align: right;
+	color: var(--dav-color-on-surface);
 }
 
 .popup-overlay {
